refactor: jwt 토큰 관리수정